# apis.fermin

./: README.md
backend/rust/: .env  Cargo.toml
backend/rust/migrations/2020-01-25-205502_create_notes/: up.sql
backend/rust/src/: main.rs  schema.rs
backend/rust/src/db/: mod.rs  model.rs  schema.rs
backend/rust/src/db/models/: notes.rs
backend/rust/src/router/: catcher.rs  home.rs  mod.rs  webapp.rs
backend/rust/src/router/api/: notes.rs
frontend/: package.json
frontend/src/: api.ts  index.js  index.pug  index.svelte
rust/: Cargo.toml
rust/migrations/2020-01-25-205502_create_notes/: up.sql
rust/migrations/2020-03-18-210446_create_notes/: up.sql
rust/migrations/2020-03-21-161559_create_notes/: up.sql
rust/src/: main.rs  schema.rs
rust/src/db/: schema.rs
rust/src/db/models/: notes.rs
rust/src/router/: catcher.rs  catchers.rs  home.rs  mod.rs  notes.rs
